fix(theme): fix blockquote overflow (with many code childs)

--- a/src/client/theme-default/styles/components/vp-doc.css
+++ b/src/client/theme-default/styles/components/vp-doc.css
@@ -235,6 +235,8 @@
 }
 
 .vp-doc :not(pre) > code {
+  display: inline-block;
+  line-height: initial;
   border-radius: 4px;
   padding: 3px 6px;
   color: var(--vp-c-text-code);
